--- a/about.css
+++ b/about.css
@@ -58,7 +58,7 @@ a {
 .section-one {
     width: 100%;
     height: 90vh;
-    background-image: url(images/splash.jpg);
+    background-image: url(images/bg-about.gif);
     background-position: center;
     background-size: cover;
 }
@@ -69,7 +69,8 @@ a {
 }
 
 .col-left {
-    margin: 50px 40px;
+    margin: 0 auto;
+    text-align: center;
 }
 
 p {
@@ -81,20 +82,26 @@ p {
 h1 {
     font-size: 40px;
     font-weight: bold;
+    padding: 10px;
+    margin: 20px;
+    color: #339BB8;
+    ;
 }
 
-span {
+h2 {
     color: blue;
+    padding-bottom: 20px;
+    font-size: 30px;
+}
+
+p {
+    color: black;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
 .profile {
     border-radius: 50%;
-    height: 500px;
+    height: 150px;
     margin-right: 20px;
-    ;
-}
-
-.socials {
-    margin: 60px 10px 10px 20px;
-    height: 40px;
 }
