--- a/about.css
+++ b/about.css
@@ -33,6 +33,11 @@ nav {
     align-items: center
 }
 
+.close,
+.menu {
+    display: none;
+}
+
 .links {
     /* flex: 1; */
     text-align: right;
@@ -96,12 +101,73 @@ h2 {
 
 p {
     color: black;
-    margin-left: 20px;
-    margin-right: 20px;
+    margin: 0 20px 0 20px;
 }
 
 .profile {
     border-radius: 50%;
     height: 150px;
     margin-right: 20px;
+}
+
+@media(max-width:768px) {
+    body {
+        height: 100vh;
+        width: 100%;
+        font-family: 'Open Sans';
+    }
+    header {
+        height: 70px;
+        width: 100%;
+    }
+    .section-one {
+        width: 100vw;
+        height: 100vh;
+        background-image: url(images/splash.jpg);
+        background-position: center;
+        background-size: cover;
+    }
+    .links ul li {
+        position: block;
+    }
+    .links {
+        position: absolute;
+        background: white;
+        height: 100vh;
+        width: 200px;
+        top: 0;
+        right: -200px;
+        text-align: left;
+        z-index: 4;
+        transition: 1s;
+    }
+    .close,
+    .menu {
+        display: block;
+        height: 25px;
+        color: black;
+        cursor: pointer;
+        margin: 20px;
+    }
+    .container {
+        display: block;
+    }
+    .profile {
+        height: 200px;
+        margin-left: 50px;
+    }
+    p {
+        font-size: 20px;
+        margin: 10px;
+        padding: 10px;
+        text-align: center;
+        letter-spacing: 0.5px;
+    }
+    h1 {
+        font-size: 40px;
+    }
+    .socials {
+        display: inline;
+        height: 35px;
+    }
 }
