--- a/portofolio.css
+++ b/portofolio.css
@@ -62,6 +62,11 @@ a {
     color: blue;
 }
 
+.close,
+.menu {
+    display: none;
+}
+
 .heading-1 {
     text-align: center;
     color: blue;
@@ -97,4 +102,50 @@ a {
     padding: 30px;
     height: 200px;
     width: 100%;
+}
+
+@media(max-width:768px) {
+    body {
+        height: 100%;
+        width: 100%;
+        font-family: 'Open Sans';
+    }
+    header {
+        height: 70px;
+        width: 100%;
+    }
+    section {
+        width: 100%;
+        height: 90vh;
+        background: #D7ECFF;
+    }
+    .links ul li {
+        position: block;
+    }
+    .links {
+        position: absolute;
+        background: white;
+        height: 100vh;
+        width: 200px;
+        top: 0;
+        right: -200px;
+        text-align: left;
+        z-index: 4;
+        transition: 1s;
+    }
+    .close,
+    .menu {
+        display: block;
+        height: 25px;
+        color: black;
+        cursor: pointer;
+        margin: 20px;
+    }
+    .container-row1 {
+        flex-direction: column;
+        margin-right: 20px;
+    }
+    .container-row2 {
+        flex-direction: column;
+    }
 }
