--- a/skills.css
+++ b/skills.css
@@ -39,6 +39,11 @@ nav {
     align-items: center
 }
 
+.close,
+.menu {
+    display: none;
+}
+
 .links {
     /* flex: 1; */
     text-align: right;
@@ -97,4 +102,46 @@ a {
     background: white;
     margin: 30px;
     padding: 30px;
+}
+
+@media(max-width:768px) {
+    body {
+        height: 100%;
+        width: 100%;
+        font-family: 'Open Sans';
+    }
+    header {
+        height: 70px;
+        width: 100%;
+    }
+    section {
+        width: 100%;
+        height: 90vh;
+        background: #D7ECFF;
+    }
+    .links ul li {
+        position: block;
+    }
+    .links {
+        position: absolute;
+        background: white;
+        height: 100vh;
+        width: 200px;
+        top: 0;
+        right: -200px;
+        text-align: left;
+        z-index: 4;
+        transition: 1s;
+    }
+    .close,
+    .menu {
+        display: block;
+        height: 25px;
+        color: black;
+        cursor: pointer;
+        margin: 20px;
+    }
+    .container-row {
+        flex-direction: column;
+    }
 }
