--- a/style.css
+++ b/style.css
@@ -55,6 +55,11 @@ a {
     color: blue;
 }
 
+.close,
+.menu {
+    display: none;
+}
+
 .section-one {
     width: 100%;
     height: 90vh;
@@ -65,11 +70,12 @@ a {
 
 .container {
     display: flex;
-    justify-content: space-between;
+    /* justify-content: space-between; */
+    column-gap: 350px;
 }
 
 .col-left {
-    margin: 50px 40px;
+    margin: 80px 80px;
 }
 
 p {
@@ -91,10 +97,75 @@ span {
     border-radius: 50%;
     height: 500px;
     margin-right: 20px;
-    ;
+}
+
+.profiles {
+    display: none;
 }
 
 .socials {
     margin: 60px 10px 10px 20px;
     height: 40px;
+    margin: 40px 10px 0 0;
+}
+
+@media(max-width:768px) {
+    body {
+        height: 100%;
+        width: 100%;
+        font-family: 'Open Sans';
+    }
+    header {
+        height: 70px;
+        width: 100%;
+    }
+    .section-one {
+        width: 100%;
+        height: 100%;
+        background-image: url(images/splash.jpg);
+        background-position: center;
+        background-size: cover;
+    }
+    .links ul li {
+        position: block;
+    }
+    .links {
+        position: absolute;
+        background: white;
+        height: 100vh;
+        width: 200px;
+        top: 0;
+        right: -200px;
+        text-align: left;
+        z-index: 4;
+        transition: 1s;
+    }
+    .close,
+    .menu {
+        display: block;
+        height: 25px;
+        color: black;
+        cursor: pointer;
+        margin: 20px;
+    }
+    .profiles {
+        display: flex;
+        justify-content: flex-start;
+        border-radius: 50%;
+        height: 300px;
+        margin-left: 48px;
+    }
+    p {
+        font-size: 12px;
+        text-align: center;
+        margin-left: 80px;
+    }
+    h1 {
+        font-size: 22px;
+        text-align: center;
+        margin-left: 80px;
+    }
+    .col-down {
+        flex-direction: row;
+    }
 }
