--- a/signup.css
+++ b/signup.css
@@ -11,6 +11,7 @@
         width: 100vw;
         font-family: 'Open Sans';
         overflow: hidden;
+        /* position: relative; */
     }
     
     header {
@@ -80,13 +81,30 @@
         margin-top: 20px;
     }
     
+    .div-form {
+        position: relative;
+        padding-bottom: 5px;
+    }
+    
+    .div-form label {
+        display: inline-block;
+        margin-top: 5px;
+    }
+    
     input {
         display: block;
-        min-width: 500px;
-        border: none;
-        margin: 20px;
-        padding: 20px;
+        min-width: 400px;
+        border: 0;
+        padding: 15px;
         background: #c5cacf;
+    }
+    
+    small {
+        /* position: absolute;
+        bottom: 0;
+        left: 0; */
+        margin-left: 20px;
+        margin-top: -20px;
     }
     
     input[type="submit"] {
@@ -106,6 +124,36 @@
         margin-left: 20px;
     }
     
-    .signup a:hover {
+    .login {
         color: blue;
+    }
+    
+    .login a:hover {
+        color: white;
+    }
+    /* button {
+        background: blue;
+        border-radius: 50px;
+        cursor: pointer;
+        padding: 14px 32px;
+        color: white;
+        border-color: transparent;
+        margin: 0 auto;
+    } */
+    
+    .div-form.pass input {
+        border-color: green;
+    }
+    
+    .div-form.fail input {
+        border-color: red;
+    }
+    
+    .div-form small {
+        visibility: hidden;
+    }
+    
+    .div-form.fail small {
+        color: red;
+        visibility: visible;
     }
