--- a/blogform.css
+++ b/blogform.css
@@ -137,3 +137,35 @@ input[type="submit"] {
 .hidden {
     display: none;
 }
+
+table {
+    width: 100%;
+    height: 100px;
+    text-align: center;
+    padding: 7px;
+}
+
+tr {
+    border-bottom: 1px solid rgb(161, 152, 152);
+    height: 50px;
+}
+
+thead tr th {
+    font-size: 14px;
+    background: blue;
+    color: white;
+    font-weight: bold;
+}
+
+.edited,
+.deleted {
+    background-color: transparent;
+    border: none;
+    color: blue;
+    cursor: pointer;
+}
+
+.edited-button:hover,
+.deleteed-button:hover {
+    color: red;
+}
