--- a/blog.css
+++ b/blog.css
@@ -91,12 +91,6 @@ h1 {
     object-position: center;
 }
 
-.post-test {
-    display: flex;
-    flex-direction: row;
-    padding: 20px;
-}
-
 .link-title {
     font-size: 30px;
     font-weight: bold;
@@ -112,6 +106,12 @@ h1 {
     margin: 20px;
 }
 
+.img-react {
+    height: 30px;
+    width: 30px;
+    margin: 0 10px 0 10px;
+}
+
 .rd-more {
     color: black;
     margin-left: 17px;
@@ -119,19 +119,6 @@ h1 {
 
 .rd-more:hover {
     color: blue;
-}
-
-.div-react {
-    display: flex;
-    flex-direction: row;
-    margin: 20px 20px 20px 0;
-    padding: 10px;
-}
-
-.img-react {
-    height: 30px;
-    width: 30px;
-    margin: 0 10px 0 10px;
 }
 
 
@@ -144,3 +131,16 @@ h1 {
 /* .date {
     margin-left: 40px;
 } */
+
+.div-react {
+    display: flex;
+    height: 30px;
+}
+
+.post-test {
+    height: 250px;
+}
+
+.author {
+    margin-left: 20px;
+}
